--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,15 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework/spring-aop
     compile group: 'org.springframework', name: 'spring-aop', version: '5.1.5.RELEASE'
 
+    // https://mvnrepository.com/artifact/org.openjfx/javafx-controls
+    compile group: 'org.openjfx', name: 'javafx-controls', version: '13-ea+2'
+
+    // https://mvnrepository.com/artifact/org.openjfx/javafx-graphics
+    compile group: 'org.openjfx', name: 'javafx-graphics', version: '13-ea+2'
+
+    // https://mvnrepository.com/artifact/org.openjfx/javafx-fxml
+    compile group: 'org.openjfx', name: 'javafx-fxml', version: '13-ea+2'
+
 
 
 
